disp: config: add kalama TUI configuration files
Add Kalama TUI build configurations.

Change-Id: I4ed9ed716c6ea12692bc149f01d34ec46e1d3154
Signed-off-by: Steve Cohen <quic_cohens@quicinc.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ CONFIG_DRM_MSM=$(MODULE_DRM_MSM)
 KBUILD_OPTIONS := DISPLAY_ROOT=$(DISPLAY_ROOT) CONFIG_DRM_MSM=$(CONFIG_DRM_MSM)
 
 ifeq ($(TARGET_SUPPORT),genericarmv8)
-	KBUILD_OPTIONS += CONFIG_ARCH_WAIPIO=y
+	KBUILD_OPTIONS += CONFIG_ARCH_KALAMA=y
 endif
 
 obj-m += msm/
