--- a/config/gki_kalamadisptui.conf
+++ b/config/gki_kalamadisptui.conf
@@ -4,9 +4,7 @@ export CONFIG_SYNC_FILE=y
 export CONFIG_DRM_MSM_DSI=y
 export CONFIG_DSI_PARSER=y
 export CONFIG_QCOM_MDSS_PLL=y
-export CONFIG_DRM_SDE_RSC=y
-export CONFIG_DRM_SDE_WB=y
 export CONFIG_DRM_MSM_REGISTER_LOGGING=y
 export CONFIG_DISPLAY_BUILD=m
-export CONFIG_HDCP_QSEECOM=y
 export CONFIG_DRM_SDE_VM=y
+export CONFIG_DRM_LOW_MSM_MEM_FOOTPRINT=y
