ipa: upgrade reg save to IPAv5.5
Add support for IPAv5.5 reg collection.

Change-Id: Id4c92d7120fff6e96e635c92369af7a3de0f2fc0
Signed-off-by: Dor Deri <quic_dderi@quicinc.com>

--- a/drivers/platform/msm/Kbuild
+++ b/drivers/platform/msm/Kbuild
@@ -88,6 +88,10 @@ ifneq (,$(filter $(CONFIG_IPA3_REGDUMP_IPA_5_0),y m))
 LINUXINCLUDE += -I$(DATAIPADRVTOP)/ipa/ipa_v3/dump/ipa5.0
 endif
 
+ifneq (,$(filter $(CONFIG_IPA3_REGDUMP_IPA_5_5),y m))
+LINUXINCLUDE += -I$(DATAIPADRVTOP)/ipa/ipa_v3/dump/ipa5.5
+endif
+
 
 obj-$(CONFIG_GSI) += gsi/
 obj-$(CONFIG_IPA3) += ipa/
