drivers: remoteproc: Import OEM changes
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/drivers/soc/Kconfig
+++ b/drivers/soc/Kconfig
@@ -49,6 +49,10 @@ source "drivers/soc/oplus/boot/Kconfig"
 #ifdef OPLUS_FEATURE_MDMFEATURE
 source "drivers/soc/oplus/mdmfeature/Kconfig"
 #endif /*OPLUS_FEATURE_MDMFEATURE*/
+
+#ifdef OPLUS_FEATURE_MODEM_MINIDUMP
+source "drivers/soc/oplus/mdmrst/Kconfig"
+#endif /*OPLUS_FEATURE_MODEM_MINIDUMP*/
 endmenu
 
 #ifdef OPLUS_FEATURE_TP_BASIC
